--- a/html/index.html
+++ b/html/index.html
@@ -1,45 +1,87 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Birthday Quest Portal</title>
     <style>
-        body { font-family: Georgia, serif; text-align: center; padding: 50px; background-color: #f9f6f1; }
-        input { margin: 10px; padding: 8px; width: 200px; font-size: 16px; }
-        button { padding: 10px 20px; font-size: 16px; }
-        .message { margin-top: 30px; font-size: 18px; color: darkgreen; }
+        body {
+            font-family: Georgia, serif;
+            background-color: #fdfaf5;
+            color: #333;
+            text-align: center;
+            padding: 2em;
+            max-width: 800px;
+            margin: auto;
+        }
+
+        h1 {
+            font-size: 2em;
+            margin-bottom: 0.5em;
+        }
+
+        p {
+            font-size: 1.1em;
+            line-height: 1.6em;
+        }
+
+        input[type="text"] {
+            padding: 0.5em;
+            margin: 0.5em;
+            font-size: 1em;
+            width: 150px;
+            text-align: center;
+        }
+
+        button {
+            padding: 0.6em 1.2em;
+            font-size: 1em;
+            margin-top: 1em;
+            cursor: pointer;
+        }
+
+        #result {
+            margin-top: 2em;
+            font-size: 1.2em;
+            color: #004400;
+        }
     </style>
 </head>
 <body>
-    <h1>Birthday Quest Portal</h1>
-    <p>Enter your Words of Power in order:</p>
 
-    <input type="text" id="word1" placeholder="Word 1">
-    <input type="text" id="word2" placeholder="Word 2">
-    <input type="text" id="word3" placeholder="Word 3">
-    <input type="text" id="word4" placeholder="Word 4"><br><br>
+    <h1>🎂 Birthday Quest Portal 🎂</h1>
 
-    <button onclick="checkWords()">Submit</button>
+    <p>Enter your <strong>Words of Power</strong> — in the correct order — to open the Portal.</p>
 
-    <div class="message" id="message"></div>
+    <div>
+        <input type="text" id="word1" placeholder="First Word" />
+        <input type="text" id="word2" placeholder="Second Word" />
+        <input type="text" id="word3" placeholder="Third Word" />
+    </div>
+
+    <button onclick="checkCombination()">Submit</button>
+
+    <div id="result"></div>
 
     <script>
-        function checkWords() {
-            const w1 = document.getElementById('word1').value.trim().toLowerCase();
-            const w2 = document.getElementById('word2').value.trim().toLowerCase();
-            const w3 = document.getElementById('word3').value.trim().toLowerCase();
-            const w4 = document.getElementById('word4').value.trim().toLowerCase();
+        function checkCombination() {
+            const word1 = document.getElementById('word1').value.trim().toLowerCase();
+            const word2 = document.getElementById('word2').value.trim().toLowerCase();
+            const word3 = document.getElementById('word3').value.trim().toLowerCase();
 
-            if (w1 === "inspiration" && w2 === "brings" && w3 === "dough" && w4 === "joy") {
-                document.getElementById('message').innerHTML = `
-                    <h2>🎉 Happy 30th Birthday Susan 🎉</h2>
-                    <p>Your inspiration brings joy to all you meet — and a little dough never hurts.</p>
-                    <p>You have been an inspiration to me, and I hope this $5,000 gift takes one less burden from your shoulders.</p>
-                    <p>Love, Dad</p>
+            if (word1 === "inspiration" && word2 === "stories" && word3 === "happy") {
+                document.getElementById('result').innerHTML = `
+                    <h2>✨ The Portal Opens ✨</h2>
+                    <p>Your Words of Power have been found:</p>
+                    <p><strong>Inspiration • Stories • Happy</strong></p>
+                    <p>May they continue to guide and delight you.</p>
+                    <p>With all my love,<br>Dad</p>
                 `;
             } else {
-                document.getElementById('message').innerText = "Not quite yet... keep going!";
+                document.getElementById('result').innerHTML = `<p>Hmm... not quite. Reflect and try again.</p>`;
             }
         }
     </script>
+
 </body>
 </html>
