--- a/html/index.html
+++ b/html/index.html
@@ -75,6 +75,9 @@
                     <p>Your Words of Power have been found:</p>
                     <p><strong>Inspiration • Stories • Happy</strong></p>
                     <p>May they continue to guide and delight you.</p>
+                    <h2>🎉 Happy 30th Birthday Susan 🎉</h2>
+                    <p>Your inspiration brings joy to all you meet — and a little dough never hurts.</p>
+                    <p>You have been an inspiration to me, and I hope this $5,000 gift takes one less burden from your shoulders.</p>
                     <p>With all my love,<br>Dad</p>
                 `;
             } else {
