--- a/html/index.html
+++ b/html/index.html
@@ -76,8 +76,9 @@
                     <p><strong>Inspiration • Stories • Happy</strong></p>
                     <p>May they continue to guide and delight you.</p>
                     <h2>🎉 Happy 30th Birthday Susan 🎉</h2>
-                    <p>Your inspiration brings joy to all you meet — and a little dough never hurts.</p>
-                    <p>You have been an inspiration to me, and I hope this $5,000 gift takes one less burden from your shoulders.</p>
+                    <p>Your inspiration brings joy to all you meet — and as any good story (or life) reminds us, a little dough never hurts.</p>
+                    <p>To celebrate your 30th, I’m giving you a <strong>$5,000 gift</strong> — an investment in your future and your passions.</p>
+                    <p>We’ll talk when we’re together at the end of June, but know this: it is yours, and I am so proud of you.</p>
                     <p>With all my love,<br>Dad</p>
                 `;
             } else {
