Ancient Scroll Teaser

--- a/html/index.html
+++ b/html/index.html
@@ -104,12 +104,35 @@
         if (now < unlockDate) {
             // Override the whole body with locked message
             document.body.innerHTML = `
-                <h1 style="font-family: Georgia, serif; text-align: center; margin-top: 3em;">🔒 Too Soon, Adventurer 🔒</h1>
+                <h1 style="font-family: Georgia, serif; text-align: center; margin-top: 1em;">🕮 The Birthday Quest 🕮</h1>
+
                 <p style="font-family: Georgia, serif; text-align: center; font-size: 1.2em; max-width: 600px; margin: 2em auto;">
-                    You have found the Portal... but all in its time.<br><br>
-                    The Portal will open when the stars align — at <strong>8:30pm on June 12, 2025 — Australian Eastern Time</strong>, the hour of your birth.<br><br>
-                    Until then, no key will turn the lock, no spell will break the seal.<br><br>
-                    Patience, and return when the stars align. 🕮✨
+                    Not all stories are bound in books.<br><br>
+                    Some... are lived.<br><br>
+                    On this day — thirty years since your tale began — a new chapter awaits.<br><br>
+                    ✨✨✨
+                </p>
+
+                <hr style="border: 1px solid #666; margin: 2em 0;">
+
+                <h2 style="font-family: Georgia, serif; text-align: center;">The Quest</h2>
+
+                <p style="font-family: Georgia, serif; text-align: center; font-size: 1.1em; max-width: 600px; margin: 2em auto;">
+                    You will seek the Words of Power.<br><br>
+                    You will unlock the Portal.<br><br>
+                    But not yet...<br><br>
+                    The Portal stirs in its sleep.<br>
+                    It will awaken at <strong>8:30pm on June 12, 2025 — Australian Eastern Time</strong>, the hour of your birth.<br><br>
+                    Until then, its secrets remain sealed. 🕮✨<br><br>
+                    When the time is right:<br>
+                    <a href="https://tinyurl.com/2rk4jpmu" style="color: #003366; font-weight: bold;">Enter the Portal</a>
+                </p>
+
+                <hr style="border: 1px solid #666; margin: 2em 0;">
+
+                <p style="font-family: Georgia, serif; text-align: center; font-size: 1.1em;">
+                    With love,<br>
+                    Dad
                 </p>
             `;
         }
