--- a/html/index.html
+++ b/html/index.html
@@ -104,36 +104,42 @@
         if (now < unlockDate) {
             // Override the whole body with locked message
             document.body.innerHTML = `
-                <h1 style="font-family: Georgia, serif; text-align: center; margin-top: 1em;">🕮 The Birthday Quest 🕮</h1>
+                <div style="font-family: Georgia, serif; background-color: #f9f6f1; border: 2px solid #ccc; border-radius: 8px; padding: 2em; max-width: 700px; margin: 2em auto; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
 
-                <p style="font-family: Georgia, serif; text-align: center; font-size: 1.2em; max-width: 600px; margin: 2em auto;">
-                    Not all stories are bound in books.<br><br>
-                    Some... are lived.<br><br>
-                    On this day — thirty years since your tale began — a new chapter awaits.<br><br>
-                    ✨✨✨
-                </p>
+                    <h1 style="text-align: center; border-bottom: 2px solid #333; padding-bottom: 0.3em; margin-bottom: 1em;">🕮 The Birthday Quest 🕮</h1>
 
-                <hr style="border: 1px solid #666; margin: 2em 0;">
+                    <p style="font-size: 1.2em; text-align: center; line-height: 1.6em; margin-bottom: 2em;">
+                        Not all stories are bound in books.<br><br>
+                        Some... are lived.<br><br>
+                        On this day — thirty years since your tale began — a new chapter awaits.<br><br>
+                        ✨✨✨
+                    </p>
 
-                <h2 style="font-family: Georgia, serif; text-align: center;">The Quest</h2>
+                    <hr style="border: 1px solid #666; margin: 2em 0;">
 
-                <p style="font-family: Georgia, serif; text-align: center; font-size: 1.1em; max-width: 600px; margin: 2em auto;">
-                    You will seek the Words of Power.<br><br>
-                    You will unlock the Portal.<br><br>
-                    But not yet...<br><br>
-                    The Portal stirs in its sleep.<br>
-                    It will awaken at <strong>8:30pm on June 12, 2025 — Australian Eastern Time</strong>, the hour of your birth.<br><br>
-                    Until then, its secrets remain sealed. 🕮✨<br><br>
-                    When the time is right:<br>
-                    <a href="https://tinyurl.com/2rk4jpmu" style="color: #003366; font-weight: bold;">Enter the Portal</a>
-                </p>
+                    <h2 style="text-align: center; font-size: 1.4em;">The Quest</h2>
 
-                <hr style="border: 1px solid #666; margin: 2em 0;">
+                    <p style="font-size: 1.1em; text-align: center; line-height: 1.6em; margin-bottom: 2em;">
+                        You will seek the Words of Power.<br><br>
+                        You will unlock the Portal.<br><br>
+                        But not yet...<br><br>
+                        The Portal stirs in its sleep.<br>
+                        It will awaken at <strong>8:30pm on June 12, 2025 — Australian Eastern Time</strong>, the hour of your birth.<br><br>
+                        Until then, its secrets remain sealed. 🕮✨
+                    </p>
 
-                <p style="font-family: Georgia, serif; text-align: center; font-size: 1.1em;">
-                    With love,<br>
-                    Dad
-                </p>
+                    <p style="font-size: 1.1em; text-align: center; line-height: 1.6em;">
+                        When the time is right:<br>
+                        <a href="https://tinyurl.com/2rk4jpmu" style="color: #003366; font-weight: bold; text-decoration: none;">Enter the Portal</a>
+                    </p>
+
+                    <hr style="border: 1px solid #666; margin: 2em 0;">
+
+                    <p style="font-size: 1.1em; text-align: center;">
+                        With love,<br>
+                        Dad
+                    </p>
+                </div>
             `;
         }
 
