Centered the container

--- a/html/index.html
+++ b/html/index.html
@@ -96,7 +96,14 @@
             max-width: 700px;
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             margin: 2em; /* small margin around */
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* center vertically */
+            align-items: center;     /* center horizontally */
+            min-height: 80vh; /* enough height to feel centered, but not too large */
         }
+
     </style>
 </head>
 <body>
