--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Birthday Quest Portal</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <style>
         body {
             font-family: Georgia, serif;
